public/css/main.less
@import "vendor/bootstrap/bootstrap";
@import "vendor/font-awesome/font-awesome";
@import "vendor/bootstrap-social";
@import "themes/default";
@import "vendor/jquery-ui";

// Scaffolding
// -------------------------

html {
  position: relative;
  min-height: 100%;
}

body {
  padding-top: 60px;
  margin-bottom: 75px;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 45px;
  line-height: 45px;

  p,
  ul {
    margin-bottom: 0;
  }
}

// Navbar
// -------------------------

.navbar-nav img {
  width: 30px;
  height: 30px;
  margin: -15px 15px -15px;
}

// Alerts
// -------------------------

.alert {
  margin-top: 20px;
}

// Thumbnails
// -------------------------

.thumbnail {
  padding: 0;
  border-radius: 0;
  box-shadow: 0 0 5px #ccc, inset 0 0 0 #000;
}

// Font Icons
// -------------------------

.fa,
[class^='ion-'] {
  margin-right: 6px;
}

// Home


// Users

.user-list .profile-pic {
  width: 175px;
  height: 175px;
  border-radius: 50%;
  border: 2px black solid;
  background-size: cover;
  background-position: center;
  margin: 0 auto;
}

.user-list .profile-pic.both {
  border-color: green;
}

.user-list .profile-pic.one {
  border-color: orange;
}

.user-list .profile-pic.none {
  border-color: black;
}

.user-list .profile-info {
  width: 50%;
  margin: 0 auto;
}

.user-list .profile-info .popover {
  width: 50%;
}

.user-list .profile-info .profile-name {
  text-align: center;
}

.user-search-box {
  display: inherit;
  margin: 0 auto;
  width: 50%;
  padding: 5px;
}

// Account page

input.activity-checkbox {
  margin-right: 10px;
}

.user-activities {
  padding-left: 15px;
}

.btn-social {
  margin-bottom: 20px;
}

// Profile page

.review .rating {
  display: inline;
}

.review .rating span {
  color: gold;
}

.review quote {
  padding-right: 10px;
}


// Transaction page

.transaction-table {
  width: 100%;
}

.rating {
  unicode-bidi: bidi-override;
  direction: rtl;
  text-align: left;
}

.rating > span {
  display: inline-block;
  position: relative;
  width: 1.2em;
  font-size: 24px;
}

.rating > span:hover:before,
.rating > span:hover ~ span:before,
.rating span.selected:before,
.rating span.selected ~ span:before {
   content: "\2605";
   position: absolute;
   color: gold;
}


// Messaging

.message-layout-grid .sidebar {
  float: left;
  width: 30%;
}

.message-snippet {
  padding-bottom: 20px;
}

.message-snippet .profile-pic {
  width: 60px;
  margin-left:2%;
  float:left;
  margin-right: 8px;
}

.message-snippet .snippet-text .timestamp {
  float: right;
  font-size: 11px;
}

.message-snippet .snippet-text .sender {
  font-weight: bold;
}

.message-snippet .snippet-text .message-content {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.thread-list {
  list-style-type: none;
  padding: 0 0 0 0;
}

.thread-list li {
  border: 1px #e9eaed solid;
  height: 75px;
}

.thread-list li.is-pending {
  background-color: #e9eaed;
}

.thread-list li.is-active, .thread-list li.is-active:hover {
  background-color: #6d84b4;
  color: white;
}

.thread-list li:hover {
  background-color: #f5f7fa;
}

.sidebar .search-box input {
  width: 100%;
}

.conversation-container {
  width: 100%;
  float: left;
}

.conversation-container .header {
  padding-bottom: 2px;
  border-bottom: 2px grey solid;
}

.conversation-container .header h3 {
  margin: 0 0 0 0;
}

.conversation-container .header .new-message-button {
  float: right;
  font-size: initial;
}

.conversation-container .conversation {
  overflow-y: auto;
  height: 400px;
}

.conversation .message-details {
  margin-top: 4px;
  margin-bottom: 4px;
  max-width: 50%;
}

.conversation .message-details .comment {
  padding: 8px;
  border-radius: 5px;
  box-shadow: 0 0 6px #B2B2B2;
  margin-bottom: 3px;
}

.conversation .myself {
  float: right;
  clear: both;
  margin-right: 5px;
}

.conversation .message-details.myself .comment {
  background-color: #D1EEFC;
}

.conversation .other-person {
  float: left;
  clear: both;
  margin-left: 5px;
}

.conversation .message-details.other-person .comment {
  background-color: #F2F2F2;
}

.conversation .author {
  font-size: 8px;
}

.conversation-container .message-form textarea {
  width: 100%;
}

